--- a/excluir-evento.html
+++ b/excluir-evento.html
@@ -17,7 +17,7 @@
         <div class="row">
             <aside class="d-flex flex-column flex-shrink-0 p-3  col-2">
 
-                <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+                <a href="./index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
 
                     <span class="fs-4 px-5">
                         <img src="img/Sound-logo.png" alt="Gama Lounge" class="img-responsive">
@@ -43,7 +43,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="index.html" class="nav-link link-dark">
+                        <a href="./index.html" class="nav-link link-dark">
                             Landing Page
                         </a>
                     </li>
